# labscare-script-mcp

./: .gitignore  README.md  config.json  get_docx_comment.py  main.py  pyproject.toml  requirements.txt  split_labscare_xml.py  test.py
.claude/: settings.local.json
knowledge/: diagnoses.json  fields.json  patterns.json
labscareXML/: HG-QC-ELC-0005-08V1.0检测报告.xmreport  docx_to_xmreport.py  docx_xml.py  example.doc  example.docx  out_from_doc.xmreport  空白文档.xmreport
prompts/: __init__.py  labscare_component_spec.py
resources/: __init__.py  componet.josn  script_spec.py
tools/: __init__.py  docx_parser.py  handlers.py  knowledge.py  simulate.py
